--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //gridlayout
     implementation "androidx.gridlayout:gridlayout:1.0.0"
+    //htmlparse
+    implementation 'org.jsoup:jsoup:1.11.2'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
